--- a/src/client/index.css
+++ b/src/client/index.css
@@ -7,18 +7,19 @@
 html,
 body {
   height: 100%;
+  font-family: "Times New Roman", Times, serif;
 }
 
 :root {
   --primary-background: #333333;
   --primary-color: #e9e9e9;
   --primary-alt-color: #8b8b8b;
+  --primary-dark-opaque: rgba(1, 1, 1, 0.3);
 }
 
 #root {
   height: 100%;
   color: var(--primary-color);
-  font-family: var(--primary-font);
 }
 
 #app {
@@ -48,7 +49,7 @@ canvas {
   padding: 0.3em;
   margin: 0.25em;
   font-size: 3.5em;
-  background: rgba(1, 1, 1, 0.3);
+  background: var(--primary-dark-opaque);
   user-select: none;
 }
 
@@ -90,74 +91,69 @@ canvas {
 
 .home {
   background-color: transparent;
+
+  .header {
+    background: var(--primary-dark-opaque);
+    backdrop-filter: blur(5px);
+    user-select: none;
+    text-align: center;
+  }
+  .title {
+    font-size: 4em;
+    margin-top: 2em;
+    padding: 0.5em;
+  }
+  .description {
+    font-style: italic;
+    font-size: 1.5em;
+    padding-bottom: 0.5em;
+  }
+  .icons {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+  }
+  .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    user-select: none;
+  }
+  .btn {
+    display: block;
+    width: 350px;
+    max-width: 85vw;
+    border-radius: 6px;
+    background: var(--primary-dark-opaque);
+    backdrop-filter: blur(5px);
+    box-shadow: 0px 0px 5px 0.5px white;
+    color: white;
+    font-style: italic;
+    font-family: inherit;
+    font-size: 40px;
+    padding: 0.25em 0em;
+    margin: 2em auto;
+    &:hover {
+      box-shadow: 0px 0px 5px 0.5px lightblue;
+    }
+  }
 }
 
-.home-title {
-  font-size: 4em;
-  margin-top: 0.5em;
-  padding: 0.5em;
-  text-shadow: 2px 2px black;
-  text-align: center;
-  background: rgba(1, 1, 1, 0.3);
-  user-select: none;
-  color: whitesmoke;
-}
-
-.home-icons {
-  position: absolute;
-  top: 0px;
-  right: 10px;
-  margin: 5px 5px;
-}
 .svg-icon {
   background-color: white;
   border-radius: 8px;
+  &:hover {
+    opacity: 0.8;
+  }
 }
 
-.svg-icon:hover {
-  opacity: 0.8;
-}
-
-.menu {
-  position: absolute;
-  bottom: 0;
-  margin: 50px 0px;
-  width: 100%;
-  text-align: center;
-}
-
-.menu-item {
-  margin: 20px 0px;
-}
-
-.menu-btn {
-  width: 350px;
-  max-width: 85vw;
-  border-radius: 6px;
-  background: rgba(1, 1, 1, 0.3);
-  box-shadow: 0px 0px 5px 0.5px white;
-  color: white;
-  font-family: inherit;
-  font-style: italic;
-  font-size: 40px;
-  text-align: center;
-  padding: 0.25em 0em;
-  backdrop-filter: blur(5px);
-  margin-top: 0.75em;
-  user-select: none;
-}
-
-.menu-btn:hover {
-  box-shadow: 0px 0px 5px 0.5px yellow;
-}
-
-.return-btn {
+.menu-btn .return-btn {
   width: 50px;
   user-select: none;
-}
-
-.return-btn:hover {
-  opacity: 0.5;
+  &:hover {
+    opacity: 0.5;
+  }
 }
 
 /* Game Overlay-------------------  */
