--- a/src/client/index.css
+++ b/src/client/index.css
@@ -14,7 +14,8 @@ body {
   --primary-background: #333333;
   --primary-color: #e9e9e9;
   --primary-alt-color: #8b8b8b;
-  --primary-dark-opaque: rgba(1, 1, 1, 0.3);
+  --primary-dark-opaque: rgba(0, 0, 0, 0.4);
+  --primary-light-opaque: rgba(255, 255, 255, 0.3);
 }
 
 #root {
@@ -93,8 +94,6 @@ canvas {
   background-color: transparent;
 
   .header {
-    background: var(--primary-dark-opaque);
-    backdrop-filter: blur(5px);
     user-select: none;
     text-align: center;
   }
@@ -125,12 +124,11 @@ canvas {
     width: 350px;
     max-width: 85vw;
     border-radius: 6px;
-    background: var(--primary-dark-opaque);
-    backdrop-filter: blur(5px);
     box-shadow: 0px 0px 5px 0.5px white;
-    color: white;
+    color: black;
     font-style: italic;
     font-family: inherit;
+    font-weight: bold;
     font-size: 40px;
     padding: 0.25em 0em;
     margin: 2em auto;
@@ -139,6 +137,18 @@ canvas {
       box-shadow: 0px 0px 5px 0.5px lightblue;
     }
   }
+}
+
+.glass-light {
+  background: var(--primary-light-opaque);
+  backdrop-filter: blur(5px);
+  border-radius: 10px;
+}
+
+.glass-dark {
+  background: var(--primary-dark-opaque);
+  backdrop-filter: blur(5px);
+  border-radius: 10px;
 }
 
 .svg-icon {
