--- a/src/client/index.css
+++ b/src/client/index.css
@@ -15,7 +15,7 @@ body {
   --primary-color: #e9e9e9;
   --primary-alt-color: #8b8b8b;
   --primary-dark-opaque: rgba(0, 0, 0, 0.8);
-  --primary-light-opaque: rgba(255, 255, 255, 0.8);
+  --primary-light-opaque: rgba(255, 255, 255, 0.6);
 }
 
 #root {
@@ -83,9 +83,13 @@ canvas {
 .header {
   user-select: none;
   text-align: center;
-  margin-top: 3em;
+  margin-top: 1em;
   padding: 0.5em;
   font-size: 1.5em;
+}
+
+.header > h1 {
+  display: inline-block;
 }
 
 .sub-title {
@@ -386,4 +390,10 @@ canvas {
 /* Margins */
 .mt-1 {
   margin-top: 1em;
+}
+
+.bottom-left {
+  position: absolute;
+  bottom: 0.5em;
+  left: 0.5em;
 }
