--- a/src/client/index.css
+++ b/src/client/index.css
@@ -139,7 +139,6 @@ footer {
   font-weight: bold;
   font-size: 40px;
   padding: 0.25em 0em;
-  margin: 1em auto;
   text-decoration: none;
   &:hover {
     box-shadow: 0px 0px 5px 0.5px lightblue;
@@ -164,6 +163,22 @@ footer {
   &:hover {
     opacity: 0.8;
   }
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  flex-wrap: wrap;
+}
+
+.flex.column {
+  flex-direction: column;
+}
+
+#divider {
+  transform: scale(0.5);
 }
 
 /* Game Overlay-------------------  */
@@ -367,29 +382,6 @@ footer {
 /* -------------------  */
 /* Lobby */
 
-.selections {
-  display: flex;
-  justify-content: center;
-  gap: 1em;
-  flex-wrap: wrap;
-}
-
-.selections > button {
-  padding: 0.5em 1em;
-  font-size: 1.25em;
-  font-weight: bold;
-  border-radius: 15%;
-  border: 2px solid white;
-}
-
-button.highlight {
-  border: 2px solid rgba(0, 150, 0, 0.9);
-}
-
-.highlight:disabled {
-  color: black;
-}
-
 .lobby-code p {
   text-align: center;
 }
@@ -424,7 +416,17 @@ button.highlight {
   border: 1.5px solid var(--primary-background);
 }
 
+#join-lobby-input {
+  width: 100%;
+  font-size: 1.5em;
+  text-align: center;
+}
+
 /* Margins */
+.mgn-1 {
+  margin: 1em auto;
+}
+
 .mt-1 {
   margin-top: 1em;
 }
