--- a/src/client/index.css
+++ b/src/client/index.css
@@ -14,7 +14,7 @@ body {
   --primary-background: #333333;
   --primary-color: #e9e9e9;
   --primary-alt-color: #8b8b8b;
-  --primary-dark-opaque: rgba(0, 0, 0, 0.8);
+  --primary-dark-opaque: rgba(0, 0, 0, 0.6);
   --primary-light-opaque: rgba(255, 255, 255, 0.6);
 }
 
@@ -378,6 +378,22 @@ footer {
 
 /* -------------------  */
 /* Lobby */
+
+.lobby-code p {
+  text-align: center;
+}
+
+.lobby-code span {
+  font-size: 1.2em;
+  padding: 0.5em;
+  background-color: #333333;
+  border-radius: 0.25em;
+}
+
+.lobby-code span:hover {
+  background-color: #444444;
+  cursor: pointer;
+}
 
 #join-lobby button {
   font-size: 1.25em;
