--- a/src/client/index.css
+++ b/src/client/index.css
@@ -135,6 +135,7 @@ footer {
   font-size: 40px;
   padding: 0.25em 0em;
   text-decoration: none;
+  user-select: none;
   &:hover {
     box-shadow: 0px 0px 5px 0.5px lightblue;
   }
@@ -174,10 +175,15 @@ footer {
 
 .flex.column {
   flex-direction: column;
+  flex-wrap: nowrap;
 }
 
 #divider {
   transform: scale(0.5);
+  user-select: none;
+  pointer-events: none;
+  cursor: none;
+  -webkit-user-drag: none;
 }
 
 /* Game Overlay-------------------  */
@@ -412,6 +418,10 @@ footer {
   border: 1.5px solid var(--primary-background);
 }
 
+#join-lobby-input::placeholder {
+  user-select: none;
+}
+
 /* Margins */
 .mgn-1 {
   margin: 1em auto;
@@ -419,6 +429,10 @@ footer {
 
 .mt-1 {
   margin-top: 1em;
+}
+
+.mt-3 {
+  margin-top: 3em;
 }
 
 .no-top-br-radius {
