--- a/src/client/index.css
+++ b/src/client/index.css
@@ -155,6 +155,7 @@ footer {
   background: var(--primary-dark-opaque);
   backdrop-filter: blur(5px);
   border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .svg-icon {
@@ -420,6 +421,28 @@ footer {
 
 #join-lobby-input::placeholder {
   user-select: none;
+}
+
+.player-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5em;
+  padding: 0.5em;
+  margin: 0.5em;
+  border: 1px solid whitesmoke;
+  border-radius: 0.5em;
+  background-color: var(--primary-background);
+}
+
+/* Highlights */
+.green-highlight {
+  color: rgba(0, 255, 0, 0.5);
+}
+
+.red-highlight {
+  color: rgba(255, 0, 0, 0.5);
 }
 
 /* Margins */
