--- a/src/client/index.css
+++ b/src/client/index.css
@@ -26,10 +26,11 @@ body {
   width: 100dvw;
 }
 
-#app {
+.content {
   height: 100%;
   width: 100%;
   position: absolute;
+  z-index: 1;
 }
 
 canvas {
@@ -77,7 +78,8 @@ canvas {
   text-align: center;
   padding: 0.5em;
   font-size: 1.5em;
-  width: 100%;
+  width: 95%;
+  margin: 1em;
 
   > h1 {
     display: inline-block;
@@ -104,7 +106,7 @@ canvas {
 
 .sub-title {
   text-align: center;
-  margin: 1em auto;
+  margin: 0.1em auto;
   padding: 0.25em;
   max-width: clamp(250px, 80vw, 500px);
   pointer-events: none;
@@ -174,6 +176,11 @@ canvas {
 .space-between {
   justify-content: space-between;
   align-items: center;
+}
+
+.flex-align-end {
+  flex-grow: 1;
+  align-content: flex-end;
 }
 
 .gap-1 {
@@ -401,6 +408,7 @@ canvas {
 
 .lobby-code p {
   text-align: center;
+  margin: 1em auto;
 }
 
 .lobby-code span {
@@ -459,7 +467,7 @@ input[type="radio"]:checked + label {
   font-weight: bold;
   padding: 0.5em;
   font-size: 1.5em;
-  margin: 1em auto 0 auto;
+  margin: 0.5em auto;
   border: 1px solid whitesmoke;
   border-radius: 0.5em;
   background-color: var(--primary-background);
@@ -587,4 +595,8 @@ input[type="radio"]:checked + label {
 
 .h-100 {
   height: 100%;
+}
+
+.pb-1 {
+  padding: 1em;
 }
