--- a/src/client/index.css
+++ b/src/client/index.css
@@ -18,3 +18,34 @@
     border: 1px solid rgba(255, 255, 255, 0.18);
   }
 }
+
+/* Loading */
+.loading {
+  background-color: rgb(0, 0, 0);
+  z-index: 2;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading > p {
+  color: white;
+  font-size: 2em;
+  letter-spacing: 0.5em;
+  animation: loadingAnimation;
+  animation-duration: 0.75s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes loadingAnimation {
+  from {
+    opacity: 0.6;
+  }
+  to {
+    opacity: 0.2;
+  }
+}
