--- a/src/client/index.css
+++ b/src/client/index.css
@@ -49,3 +49,41 @@
     opacity: 0.2;
   }
 }
+
+.slider {
+  width: 100%;
+  height: 15px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+  color: black;
+  border: none;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: url("~../../../../assets/icons/clock.svg") no-repeat center;
+  background-size: cover;
+  cursor: pointer;
+  background-color: red;
+}
+
+.slider::-moz-range-thumb {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: url("~../../../../assets/icons/clock.svg") no-repeat center;
+  background-size: cover;
+  background-color: rgba(185, 14, 31, 0.6);
+  cursor: pointer;
+}
